--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,31 @@
-Website Ideas:
+ADJUSTMENTS:
+    Make documents an article (CSS).
 
-Begin the website with an animation (the incomplete works of Jai Matthews) before continuing to the site.
+    Fix css for large screens.
 
-Save links and changes as JSON files.
+CHANGES:
+    Create a featured posts page.
+
+    Clean up assets folder (it's a bloody mess!).
+
+    Begin the website with an animation (the incomplete works of Jai Matthews) before continuing to the site.
+
+DYNAMIC/HTTPS FEATURES:
+    (long term) create and use a content management system.
+
+CONTENT:
+    Portfolios
+        bookabench
+        getting trashed
+        game
+        gravity
+        horse
+        balls DONE
+        countdown DONE
+        password
+        artworks DONE
+        article editior
+
+    Balls 2 (working title)
+
+    Canvas Castle
