Finished portfolios & CNC
Portfolios are all done and linked to. I also removed the horse link from the site (I was never going to finish it). And CNC is back on the website, but with only the static components (it's okay - the website was mostly static).

--- a/todo.txt
+++ b/todo.txt
@@ -24,7 +24,7 @@ CONTENT:
         bookabench DONE
         getting trashed DONE
         game
-        gravity
+        gravity DONE
         horse
         balls DONE
         countdown DONE
